--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,11 @@ ul {
   padding: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 ul{
   list-style: none ;
 }
@@ -271,7 +276,7 @@ letter-spacing: 0.03em;
 }
 
 .footer-item:not(:last-child) {
-padding-bottom: 9px;
+margin-bottom: 9px;
 }
 
 .info-links {
@@ -344,39 +349,37 @@ background-color: var(--accent-color);
 }
 
 .profile-content {
+  flex-basis: calc(100% / 3 - 30px);
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.profile-content-min {
-  margin-right: 0;
-}
-
-.profile-content:last-child {
-  margin-right: 0;
+.card-content {
+  padding: 20px 24px;
+  border: 1px solid rgba(238, 238, 238, 1);
 }
 
 .profile-img {
-  margin-left: -30px;
   display: flex;
   flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
 
 .prof-img {
-  margin-bottom: 30px;
+  
 }
 
 .profile-title {
-margin-bottom: 10px;
 font-size: 18px;
-line-height: 2px;
+line-height: 36px;
 letter-spacing: 0.06em;
 color: var(--secondary-title-color);
 }
 
 .profile-text {
-padding-bottom: 30px;
+margin-top: 4px;
 font-size: 16px;
 line-height: 2.25;
 letter-spacing: 0.03em;
