--- a/css/styles.css
+++ b/css/styles.css
@@ -350,9 +350,8 @@ background-color: var(--accent-color);
 
 .profile-content {
   flex-basis: calc(100% / 3 - 30px);
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 .card-content {
@@ -361,8 +360,8 @@ background-color: var(--accent-color);
 }
 
 .profile-img {
-  margin-right: -30px;
-  margin-bottom: -30px;
+  margin-top: -30px;
+  margin-left: -30px;
   display: flex;
   flex-wrap: wrap;
   
